--- a/src/resume.builder/MyForm.css
+++ b/src/resume.builder/MyForm.css
@@ -1,64 +1,57 @@
 /* MyForm.css */
 
 body {
-    background-color:#D3D3D3;
+  background-color: beige;
 }
 
-/* Add a background color and padding to the container */
 .container {
-    background-color: white;
-    padding: 30px;
-  }
-  
-  /* Align the form element to the left center of the page */
-  .form {
-    display: flex;
-    justify-content: flex-start; /* Align to the left */
-    align-items: center; /* Align to the center */
-    width: 500px; /* Increase the width */
-    font-size: 20px; /* Increase the font size */
-    font-family: Verdana, Geneva, Tahoma, sans-serif; /* Use a creative font */
-  }
-  
-  /* Add styles to the title and subtitle */
-  .title {
-    margin-top: 50px; /* Add a top margin to the title */
-    color: blue;
-    font-size: 36px;
-    font-weight: bold;
-  }
-  
-  .subtitle {
-    margin-top: 20px;
-    color: blue;
-    font-size: 24px;
-  }
-  
-  /* Add styles to the input-container */
-  .input-container {
-    display: flex; /* Use the flex layout */
-    justify-content: space-between; /* Align the elements to the right */
-    align-items: center;
-    margin-top: 20px;
-  }
+  background-color: beige;
+  padding: 15px;
+}
 
-  .success-message {
-    color: green;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  /* Add styles to the input elements */
-  input[type='text'],
-  input[type='submit'] {
-    font-size: 18px;
-    padding: 10px;
-    border: 1px solid blue;
-    border-radius: 5px;
-  }
-  
-  input[type='submit'] {
-    background-color: blue;
-    color: white;
-  }
-  
+.title {
+  color: green;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.input-container {
+  margin-top: 20px;
+}
+
+.subtitle {
+  margin-top: 10px;
+  color: green;
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 40px;
+}
+
+.textValue {
+  color: black;
+  font-size: 10px;
+  margin-left: 20px;
+  width: 400px;
+}
+
+.success-message {
+  color: green;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+/* Add styles to the input elements */
+input[type='text'],
+input[type='submit'] {
+  font-size: 15px;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+input[type='submit'] {
+  margin-left: 15px;
+  background-color: #D3D3D3;
+  color: green;
+}
