--- a/src/resumebuilder/HomePage.css
+++ b/src/resumebuilder/HomePage.css
@@ -1,16 +1,35 @@
-/* HomePage.css */
-
 body {
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .container {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 15px;
 }
 
+.username {
+  margin-top: 10px;
+  color: black;
+  font-size: 40px;
+  font-weight: bold;
+  margin-right: 40px;
+}
+
+.mobilenumber {
+  margin-top: 10px;
+  color: black;
+  font-size: 15px;
+  margin-right: 40px;
+}
+
+.emailaddress {
+  margin-top: 10px;
+  color: black;
+  font-size: 15px;
+}
+
 .title {
-  color: darkgreen;
+  color: black;
   font-size: 50px;
   font-weight: bold;
 }
@@ -18,22 +37,26 @@ body {
 .input-container {
   margin-top: 20px; 
   display: block;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.mobilelogo {
+  max-width: 1%;
 }
 
 .subtitle {
   margin-top: 10px;
-  color: darkgreen;
+  color: black;
   font-size: 24px;
   font-weight: bold;
   margin-left: 40px;
 }
 
-.response {
-  margin-top: 10px;
-  color: green;
-  font-size: 24px;
-  font-weight: bold;
-  margin-left: 20px;
+.summary {
+  color: black;
+  font-size: 15px;
 }
 
 .textValue {
@@ -41,13 +64,6 @@ body {
   font-size: 10px;
   margin-left: 20px;
   width: 400px;
-}
-
-.success-message {
-  color: darkgreen;
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 30px;
 }
 
 .error-message {
