--- a/src/components/MyProfile.css
+++ b/src/components/MyProfile.css
@@ -1,70 +1,93 @@
 .profile-container {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    width: 400px;
-    margin: 0 auto;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  width: 400px;
+  margin: 0 auto;
+}
+
+.profile-title {
+  margin-bottom: 20px;
+  color: #333;
+  font-size: 32px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.user-details {
+  margin-top: 30px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+}
+
+.form-group label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #555;
+}
+
+.form-group input,
+.form-group select {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form-group input[readonly] {
+  background-color: #f1f1f1;
+}
+
+.form-group input:focus,
+.form-group select:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.user-details p {
+  margin-bottom: 10px;
+  color: #555;
+  font-size: 16px;
+}
+
+.profile-btn {
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.edit-btn {
+  background-color: #007bff;
+}
+
+.update-btn {
+  background-color: #28a
+}
+
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left: 4px solid #007bff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .profile-title {
-    margin-bottom: 20px;
-    color: #333;
-    font-size: 32px;
-    text-align: center;
-    text-transform: uppercase;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .user-details {
-    margin-top: 30px;
-  }
-  
-  .form-item {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 25px;
-  }
-  
-  .form-item label {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #555;
-  }
-  
-  .form-item input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
-  .form-item input[readonly] {
-    background-color: #f1f1f1;
-  }
-  
-  .form-item input:focus {
-    outline: none;
-    border-color: #007bff;
-  }
-  
-  .user-details p {
-    margin-bottom: 10px;
-    color: #555;
-    font-size: 16px;
-  }
-  
-  .profile-btn {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .profile-btn:hover {
-    background-color: #0056b3;
-  }
-  
+}
