--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,4 +1,4 @@
-/* src/components/Banner.css */
+/* Banner.css */
 .banner {
   position: fixed;
   box-sizing: border-box;
@@ -21,16 +21,23 @@
   gap: 30px;
 }
 
-/* Optional: Add some styling for the buttons */
 .banner-right {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 10px; /* Reduced gap for better spacing */
 }
 
-.banner-title {
+.banner-title-button {
   font-size: 2.5rem;
   margin: 0;
+  padding: 6px 12px; /* Add padding to make it look like a button */
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  background-color: #2c2c2c; /* Custom color for the "BookMyGift" button */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-decoration: none; /* Remove underline from the Link */
 }
 
 .search-bar {
@@ -39,6 +46,8 @@
   gap: 20px;
   width: 1000px;
 }
+
+/* Styling for the search bar input and other buttons remain the same */
 
 /* Styling for the search bar input */
 .search-bar input[type="text"] {
